--- a/src/CamMonitor/CamMonitor/CamMonitor.rc
+++ b/src/CamMonitor/CamMonitor/CamMonitor.rc
@@ -66,68 +66,73 @@ END
 // Dialog
 //
 
-IDD_LIVE DIALOGEX 0, 0, 218, 380
+IDD_LIVE DIALOGEX 0, 0, 218, 426
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Open Camera",IDC_OPENCAMERA,7,7,65,17
-    LTEXT           "",IDC_STATIC_SERIAL,84,6,78,24
-    CONTROL         "FAN",IDC_FAN_CTRL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,6,29,10
-    CONTROL         "LED",IDC_LED_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,21,28,10
-    GROUPBOX        "Setup",IDC_STATIC,6,33,204,318
-    LTEXT           "Framerate",IDC_STATIC,24,46,60,8
-    COMBOBOX        IDC_FRAMERATE,90,43,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Shutter Speed",IDC_STATIC,24,66,60,8
-    COMBOBOX        IDC_SHUTTERFPS,90,63,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Expose",IDC_STATIC,24,87,60,8
-    EDITTEXT        IDC_EXPOSE_ON,114,85,48,14,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_EXPOSE_OFF,114,103,48,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Resolution",IDC_STATIC,24,128,60,8
-    COMBOBOX        IDC_RESOLUTION,90,125,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Sync In",IDC_STATIC,24,150,60,8
-    CONTROL         "Internal",IDC_SYNC_IN_INTERNAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,91,150,41,10
-    CONTROL         "External",IDC_SYNC_IN_EXTERNAL,"Button",BS_AUTORADIOBUTTON,149,150,42,10
-    LTEXT           "Sync Out",IDC_STATIC,24,170,60,8
-    CONTROL         "POSI",IDC_SYNC_OUT_SIGNAL_POSI,"Button",BS_AUTORADIOBUTTON | WS_GROUP,128,170,32,10
-    CONTROL         "NEGA",IDC_SYNC_OUT_SIGNAL_NEGA,"Button",BS_AUTORADIOBUTTON,169,170,34,10
-    LTEXT           "Signal:",IDC_STATIC,90,170,30,8
-    EDITTEXT        IDC_SYNC_OUT_DELAY,129,184,45,14,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_SYNC_OUT_WIDTH,129,203,45,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Magnification:",IDC_STATIC,90,223,48,8
-    COMBOBOX        IDC_SYNC_OUT_MAGNIFICATION,144,222,48,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Quantization",IDC_STATIC,24,248,66,8
-    COMBOBOX        IDC_QUANTIZATION,90,246,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Decode Position",IDC_STATIC,24,270,66,8
-    LTEXT           "X:",IDC_STATIC,92,270,14,8
-    EDITTEXT        IDC_DECODE_POS_X,106,268,32,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Y:",IDC_STATIC,151,270,14,8
-    EDITTEXT        IDC_DECODE_POS_Y,165,268,32,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "W:",IDC_STATIC,92,288,14,8
-    EDITTEXT        IDC_DECODE_POS_W,106,286,32,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "H:",IDC_STATIC,151,288,14,8
-    EDITTEXT        IDC_DECODE_POS_H,165,287,32,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Acquisition mode",IDC_STATIC,25,309,59,8
-    CONTROL         "Single",IDC_ACQUISITION_SINGLE,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,91,309,35,10
-    CONTROL         "Continuous",IDC_ACQUISITION_CONTINUOUS,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,146,309,52,10
-    PUSHBUTTON      "Record",IDC_REC,12,356,54,14
-    PUSHBUTTON      "Stop",IDC_STOP,72,356,54,14
-    PUSHBUTTON      "Snapshot",IDC_SNAPSHOT,156,356,48,14
-    LTEXT           "On:",IDC_STATIC,90,87,15,8
-    LTEXT           "Off:",IDC_STATIC,89,106,15,8
-    LTEXT           "Delay:",IDC_STATIC,90,186,30,8
-    LTEXT           "Width:",IDC_STATIC,90,205,30,8
-    LTEXT           "(Clock)",IDC_STATIC,170,88,24,8
-    LTEXT           "(Clock)",IDC_STATIC,170,105,24,8
-    LTEXT           "(Clock)",IDC_STATIC,179,186,24,8
-    LTEXT           "(Clock)",IDC_STATIC,180,206,24,8
-    PUSHBUTTON      "Save to",IDC_SAVE_TO,29,330,53,14
+    PUSHBUTTON      "Open Camera", IDC_OPENCAMERA,15,7,65,17
+    LTEXT           "",IDC_STATIC_SERIAL,18,30,126,18
+    CONTROL         "FAN",IDC_FAN_CTRL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,173,13,29,10
+    CONTROL         "LED",IDC_LED_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,173,28,28,10
+    GROUPBOX        "Setup",IDC_STATIC,7,54,204,318
+    LTEXT           "Framerate",IDC_STATIC,24,66,60,8
+    COMBOBOX        IDC_FRAMERATE,90,63,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Shutter Speed",IDC_STATIC,24,86,60,8
+    COMBOBOX        IDC_SHUTTERFPS,90,83,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Expose",IDC_STATIC,24,107,60,8
+    LTEXT           "On:",IDC_STATIC,90,107,15,8
+    EDITTEXT        IDC_EXPOSE_ON,114,105,48,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "(nsec)",IDC_STATIC,170,108,24,8
+    LTEXT           "Off:",IDC_STATIC,89,126,15,8
+    EDITTEXT        IDC_EXPOSE_OFF,114,123,48,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "(nsec)",IDC_STATIC,170,126,24,8
+    LTEXT           "Resolution",IDC_STATIC,24,148,60,8
+    COMBOBOX        IDC_RESOLUTION,90,145,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Sync In",IDC_STATIC,24,164,60,8
+    CONTROL         "Internal",IDC_SYNC_IN_INTERNAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,91,164,41,10
+    CONTROL         "External",IDC_SYNC_IN_EXTERNAL,"Button",BS_AUTORADIOBUTTON,149,164,42,10
+    LTEXT           "Signal:",IDC_STATIC,90,178,30,8
+    CONTROL         "POSI",IDC_SYNC_IN_SIGNAL_POSI,"Button",BS_AUTORADIOBUTTON | WS_GROUP,128,178,32,10
+    CONTROL         "NEGA",IDC_SYNC_IN_SIGNAL_NEGA,"Button",BS_AUTORADIOBUTTON,169,178,34,10
+    LTEXT           "Sync Out",IDC_STATIC,24,195,60,8
+    LTEXT           "Signal:",IDC_STATIC,90,195,30,8
+    CONTROL         "POSI",IDC_SYNC_OUT_SIGNAL_POSI,"Button",BS_AUTORADIOBUTTON | WS_GROUP,128,195,32,10
+    CONTROL         "NEGA",IDC_SYNC_OUT_SIGNAL_NEGA,"Button",BS_AUTORADIOBUTTON,169,195,34,10
+    LTEXT           "Delay:",IDC_STATIC,90,210,30,8
+    EDITTEXT        IDC_SYNC_OUT_DELAY,129,209,45,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "(nsec)",IDC_STATIC,179,210,24,8
+    LTEXT           "Width:",IDC_STATIC,90,230,30,8
+    EDITTEXT        IDC_SYNC_OUT_WIDTH,129,228,45,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "(nsec)",IDC_STATIC,180,230,24,8
+    LTEXT           "Magnification:",IDC_STATIC,90,249,48,8
+    COMBOBOX        IDC_SYNC_OUT_MAGNIFICATION,144,249,48,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Quantization",IDC_STATIC,24,268,66,8
+    COMBOBOX        IDC_QUANTIZATION,90,266,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Decode Position",IDC_STATIC,24,290,66,8
+    LTEXT           "X:",IDC_STATIC,92,290,14,8
+    EDITTEXT        IDC_DECODE_POS_X,106,289,32,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Y:",IDC_STATIC,151,290,14,8
+    EDITTEXT        IDC_DECODE_POS_Y,165,289,32,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "W:",IDC_STATIC,92,308,14,8
+    EDITTEXT        IDC_DECODE_POS_W,106,306,32,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "H:",IDC_STATIC,151,308,14,8
+    EDITTEXT        IDC_DECODE_POS_H,165,307,32,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Acquisition Mode",IDC_STATIC,25,329,59,8
+    CONTROL         "Single",IDC_ACQUISITION_SINGLE,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,91,329,35,10
+    CONTROL         "Continuous",IDC_ACQUISITION_CONTINUOUS,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,146,329,52,10
+    PUSHBUTTON      "Save to",IDC_SAVE_TO,29,350,53,14
+    PUSHBUTTON      "Reset SeqNo",IDC_RESET_SEQNO,140,350,52,14
+    PUSHBUTTON      "Record",IDC_REC,12,377,54,14
+    PUSHBUTTON      "Stop",IDC_STOP,72,377,54,14
+    PUSHBUTTON      "Snapshot",IDC_SNAPSHOT,156,377,48,14
+    PUSHBUTTON      "Reset Camera",IDC_RESETCAMERA,90,7,65,17
 END
 
-IDD_OPERATION DIALOGEX 0, 0, 238, 417
+IDD_OPERATION DIALOGEX 0, 0, 238, 459
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_TAB_CTRL,"SysTabControl32",0x0,7,7,224,403
+    CONTROL         "",IDC_TAB_CTRL,"SysTabControl32",0x0,7,7,224,445
 END
 
 IDD_FILE DIALOGEX 0, 0, 218, 266
@@ -238,7 +243,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 211
         TOPMARGIN, 7
-        BOTTOMMARGIN, 373
+        BOTTOMMARGIN, 419
     END
 
     IDD_OPERATION, DIALOG
@@ -246,7 +251,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 231
         TOPMARGIN, 7
-        BOTTOMMARGIN, 410
+        BOTTOMMARGIN, 452
     END
 
     IDD_FILE, DIALOG
@@ -354,8 +359,8 @@ CAPTION "About CamMonitor"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,14,14,20,20
-    LTEXT           "CamMonitor, Version 1.0.0.0",IDC_STATIC,42,14,132,8,SS_NOPREFIX
-    LTEXT           "Copyright (C) 2020 PHOTRON LIMITED",IDC_STATIC,42,26,140,8
+    LTEXT           "CamMonitor, Version 1.4.0.0",IDC_STATIC,42,14,132,8,SS_NOPREFIX
+    LTEXT           "Copyright (C) 2022 PHOTRON LIMITED",IDC_STATIC,42,26,140,8
     DEFPUSHBUTTON   "OK",IDOK,150,41,50,14,WS_GROUP
 END
 
@@ -479,8 +484,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,3,0,0
- PRODUCTVERSION 1,3,0,0
+ FILEVERSION 1,4,0,0
+ PRODUCTVERSION 1,4,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -497,12 +502,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "PHOTRON LIMITED"
             VALUE "FileDescription", "CamMonitor"
-            VALUE "FileVersion", "1.3.0.0"
+            VALUE "FileVersion", "1.4.0.0"
             VALUE "InternalName", "CamMonitor.exe"
-            VALUE "LegalCopyright", "Copyright (C) 2020 PHOTRON LIMITED"
+            VALUE "LegalCopyright", "Copyright (C) 2022 PHOTRON LIMITED"
             VALUE "OriginalFilename", "CamMonitor.exe"
             VALUE "ProductName", "Photron USB Control SDK Sample Application"
-            VALUE "ProductVersion", "1.3.0.0"
+            VALUE "ProductVersion", "1.4.0.0"
         END
     END
     BLOCK "VarFileInfo"
@@ -535,6 +540,7 @@ END
 STRINGTABLE
 BEGIN
     IDR_MAINFRAME           "CamMonitor"
+    IDS_ERROR_NOT_SUPPORTED "Not Supported."
 END
 
 STRINGTABLE
