add faces sample

--- a/src/CamMonitor/CamMonitor/CamMonitor.rc
+++ b/src/CamMonitor/CamMonitor/CamMonitor.rc
@@ -75,10 +75,13 @@ BEGIN
     CONTROL         "FAN",IDC_FAN_CTRL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,173,13,29,10
     CONTROL         "LED",IDC_LED_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,173,28,28,10
     GROUPBOX        "Setup",IDC_STATIC,7,54,204,318
+
     LTEXT           "Framerate",IDC_STATIC,24,66,60,8
     COMBOBOX        IDC_FRAMERATE,90,63,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+
     LTEXT           "Shutter Speed",IDC_STATIC,24,86,60,8
     COMBOBOX        IDC_SHUTTERFPS,90,83,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+
     LTEXT           "Expose",IDC_STATIC,24,107,60,8
     LTEXT           "On:",IDC_STATIC,90,107,15,8
     EDITTEXT        IDC_EXPOSE_ON,114,105,48,14,ES_AUTOHSCROLL | ES_NUMBER
@@ -86,28 +89,36 @@ BEGIN
     LTEXT           "Off:",IDC_STATIC,89,126,15,8
     EDITTEXT        IDC_EXPOSE_OFF,114,123,48,14,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "(nsec)",IDC_STATIC,170,126,24,8
+
     LTEXT           "Resolution",IDC_STATIC,24,148,60,8
     COMBOBOX        IDC_RESOLUTION,90,145,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+
     LTEXT           "Sync In",IDC_STATIC,24,164,60,8
     CONTROL         "Internal",IDC_SYNC_IN_INTERNAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,91,164,41,10
     CONTROL         "External",IDC_SYNC_IN_EXTERNAL,"Button",BS_AUTORADIOBUTTON,149,164,42,10
     LTEXT           "Signal:",IDC_STATIC,90,178,30,8
     CONTROL         "POSI",IDC_SYNC_IN_SIGNAL_POSI,"Button",BS_AUTORADIOBUTTON | WS_GROUP,128,178,32,10
     CONTROL         "NEGA",IDC_SYNC_IN_SIGNAL_NEGA,"Button",BS_AUTORADIOBUTTON,169,178,34,10
+
     LTEXT           "Sync Out",IDC_STATIC,24,195,60,8
     LTEXT           "Signal:",IDC_STATIC,90,195,30,8
     CONTROL         "POSI",IDC_SYNC_OUT_SIGNAL_POSI,"Button",BS_AUTORADIOBUTTON | WS_GROUP,128,195,32,10
     CONTROL         "NEGA",IDC_SYNC_OUT_SIGNAL_NEGA,"Button",BS_AUTORADIOBUTTON,169,195,34,10
+
     LTEXT           "Delay:",IDC_STATIC,90,210,30,8
     EDITTEXT        IDC_SYNC_OUT_DELAY,129,209,45,14,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "(nsec)",IDC_STATIC,179,210,24,8
+
     LTEXT           "Width:",IDC_STATIC,90,230,30,8
     EDITTEXT        IDC_SYNC_OUT_WIDTH,129,228,45,14,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "(nsec)",IDC_STATIC,180,230,24,8
+
     LTEXT           "Magnification:",IDC_STATIC,90,249,48,8
     COMBOBOX        IDC_SYNC_OUT_MAGNIFICATION,144,249,48,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+
     LTEXT           "Quantization",IDC_STATIC,24,268,66,8
     COMBOBOX        IDC_QUANTIZATION,90,266,108,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+
     LTEXT           "Decode Position",IDC_STATIC,24,290,66,8
     LTEXT           "X:",IDC_STATIC,92,290,14,8
     EDITTEXT        IDC_DECODE_POS_X,106,289,32,14,ES_AUTOHSCROLL | ES_NUMBER
@@ -117,15 +128,22 @@ BEGIN
     EDITTEXT        IDC_DECODE_POS_W,106,306,32,14,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "H:",IDC_STATIC,151,308,14,8
     EDITTEXT        IDC_DECODE_POS_H,165,307,32,14,ES_AUTOHSCROLL | ES_NUMBER
+
     LTEXT           "Acquisition Mode",IDC_STATIC,25,329,59,8
     CONTROL         "Single",IDC_ACQUISITION_SINGLE,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,91,329,35,10
     CONTROL         "Continuous",IDC_ACQUISITION_CONTINUOUS,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,146,329,52,10
-    PUSHBUTTON      "Save to",IDC_SAVE_TO,29,350,53,14
-    PUSHBUTTON      "Reset SeqNo",IDC_RESET_SEQNO,140,350,52,14
-    PUSHBUTTON      "Record",IDC_REC,12,377,54,14
-    PUSHBUTTON      "Stop",IDC_STOP,72,377,54,14
-    PUSHBUTTON      "Snapshot",IDC_SNAPSHOT,156,377,48,14
-    PUSHBUTTON      "Reset Camera",IDC_RESETCAMERA,90,7,65,17
+
+    LTEXT           "Decode Mode", IDC_STATIC, 25, 341, 59, 8
+    CONTROL         "CPU", IDC_DECODE_CPU, "Button", BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP, 91, 341, 35, 10
+    CONTROL         "GPU", IDC_DECODE_GPU, "Button", BS_AUTORADIOBUTTON | WS_TABSTOP, 146, 341, 52, 10
+
+    PUSHBUTTON      "Save to",      IDC_SAVE_TO,               29,372,53,14
+    PUSHBUTTON      "Reset SeqNo",  IDC_RESET_SEQNO,           140,372,52,14
+    PUSHBUTTON      "Record",       IDC_REC,                   12,400,54,14
+    PUSHBUTTON      "Stop",         IDC_STOP,                  72,400,54,14
+    PUSHBUTTON      "Snapshot",     IDC_SNAPSHOT,              156,400,48,14
+
+    PUSHBUTTON      "Reset Camera", IDC_RESETCAMERA,           90,7,65,17
 END
 
 IDD_OPERATION DIALOGEX 0, 0, 238, 459
@@ -359,8 +377,8 @@ CAPTION "About CamMonitor"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,14,14,20,20
-    LTEXT           "CamMonitor, Version 1.4.0.0",IDC_STATIC,42,14,132,8,SS_NOPREFIX
-    LTEXT           "Copyright (C) 2022 PHOTRON LIMITED",IDC_STATIC,42,26,140,8
+    LTEXT           "CamMonitor, Version 1.6.0.0",IDC_STATIC,42,14,132,8,SS_NOPREFIX
+    LTEXT           "Copyright (C) 2023 PHOTRON LIMITED",IDC_STATIC,42,26,140,8
     DEFPUSHBUTTON   "OK",IDOK,150,41,50,14,WS_GROUP
 END
 
@@ -484,8 +502,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,4,0,0
- PRODUCTVERSION 1,4,0,0
+ FILEVERSION 1,6,0,0
+ PRODUCTVERSION 1,6,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -502,12 +520,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "PHOTRON LIMITED"
             VALUE "FileDescription", "CamMonitor"
-            VALUE "FileVersion", "1.4.0.0"
+            VALUE "FileVersion", "1.6.0.0"
             VALUE "InternalName", "CamMonitor.exe"
-            VALUE "LegalCopyright", "Copyright (C) 2022 PHOTRON LIMITED"
+            VALUE "LegalCopyright", "Copyright (C) 2023 PHOTRON LIMITED"
             VALUE "OriginalFilename", "CamMonitor.exe"
             VALUE "ProductName", "Photron USB Control SDK Sample Application"
-            VALUE "ProductVersion", "1.4.0.0"
+            VALUE "ProductVersion", "1.6.0.0"
         END
     END
     BLOCK "VarFileInfo"
