--- a/src/cvdemo/cvdemo/cvdemo.vcxproj.filters
+++ b/src/cvdemo/cvdemo/cvdemo.vcxproj.filters
@@ -20,13 +20,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\inc\PhotronVideoCapture.h">
+    <ClInclude Include="..\..\..\include\PhotronVideoCapture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\inc\PUCLIB.h">
+    <ClInclude Include="..\..\..\include\PUCLIB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\inc\PUCLib_Wrapper.h">
+    <ClInclude Include="..\..\..\include\PUCLib_Wrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
