--- a/src/CamMonitor/CamMonitor/CamMonitor.vcxproj.filters
+++ b/src/CamMonitor/CamMonitor/CamMonitor.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="SaveFileDialog.h">
       <Filter>Dialog</Filter>
     </ClInclude>
+    <ClInclude Include="RingBuffer.h">
+      <Filter>Common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CamMonitor.cpp">
@@ -148,6 +151,9 @@
     </ClCompile>
     <ClCompile Include="SaveFileDialog.cpp">
       <Filter>Dialog</Filter>
+    </ClCompile>
+    <ClCompile Include="RingBuffer.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
